force-app/main/default/objects/maps__LiveAssetDailySummaryEvent__c/maps__LiveAssetDailySummaryEvent__c.object-meta.xml
<CustomObject>
    <label>Maps Live Asset Daily Summary Event</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Maps Live Asset Daily Summary Event Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Maps Live Asset Daily Summary Events</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>