force-app/main/default/objects/maps__LiveAssetDailySummaryEvent__c/fields/maps__AlertSent__c.field-meta.xml
<CustomField>
    <fullName>maps__AlertSent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Denotes if this event was included in a previous email alert</description>
    <inlineHelpText>Denotes if this event was included in a previous email alert</inlineHelpText>
    <label>Alert Sent</label>
    <type>Checkbox</type>
</CustomField>