force-app/main/default/objects/maps__LiveAssetDailySummaryEvent__c/fields/maps__AverageSpeed_kph__c.field-meta.xml
<CustomField>
    <fullName>maps__AverageSpeed_kph__c</fullName>
    <inlineHelpText>Average speed over the course of the event, in kilometers per hour</inlineHelpText>
    <label>Average Speed (kph)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>