force-app/main/default/objects/maps__LiveAssetDailySummaryEvent__c/fields/maps__AverageSpeed_mph__c.field-meta.xml
<CustomField>
    <fullName>maps__AverageSpeed_mph__c</fullName>
    <description>Average speed over the course of the event, in miles per hour</description>
    <formula>ROUND(maps__AverageSpeed_kph__c * 0.62137, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Average speed over the course of the event, in miles per hour</inlineHelpText>
    <label>Average Speed (mph)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>