force-app/main/default/objects/maps__LiveAssetDailySummaryEvent__c/fields/maps__Country__c.field-meta.xml
<CustomField>
    <fullName>maps__Country__c</fullName>
    <description>Maps Live Country address field</description>
    <inlineHelpText>Country of event location (when available)</inlineHelpText>
    <label>Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>