force-app/main/default/objects/maps__LiveAssetDailySummaryEvent__c/fields/maps__EndUnixTimeStamp__c.field-meta.xml
<CustomField>
    <fullName>maps__EndUnixTimeStamp__c</fullName>
    <label>End Unix Time Stamp</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>