force-app/main/default/objects/maps__LiveAssetDailySummaryEvent__c/fields/maps__EventType__c.field-meta.xml
<CustomField>
    <fullName>maps__EventType__c</fullName>
    <inlineHelpText>Type of summary event represented by this record</inlineHelpText>
    <label>Event Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Stop</fullName>
            </value>
            <value>
                <fullName>Speeding</fullName>
            </value>
            <value>
                <fullName>Hard Acceleration</fullName>
            </value>
            <value>
                <fullName>Hard Braking</fullName>
            </value>
            <value>
                <fullName>Speed Threshold</fullName>
            </value>
            <value>
                <fullName>First Message of Day</fullName>
            </value>
            <value>
                <fullName>Last Message of Day</fullName>
            </value>
            <value>
                <fullName>First Motion</fullName>
            </value>
            <value>
                <fullName>Last Motion</fullName>
            </value>
            <value>
                <fullName>Live App Toggle On</fullName>
            </value>
            <value>
                <fullName>Live App Toggle Off</fullName>
            </value>
            <value>
                <fullName>Device Battery On</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>