force-app/main/default/objects/maps__LiveAssetDailySummaryEvent__c/fields/maps__Full_Address__c.field-meta.xml
<CustomField>
    <fullName>maps__Full_Address__c</fullName>
    <inlineHelpText>This is the full address of where the event occurred</inlineHelpText>
    <label>Full Address</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>