force-app/main/default/objects/maps__LiveAssetDailySummaryEvent__c/fields/maps__LiveDailyDriveTrip__c.field-meta.xml
<CustomField>
    <fullName>maps__LiveDailyDriveTrip__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Live Daily Drive Trip</label>
    <referenceTo>maps__LiveDailyDriveTrip__c</referenceTo>
    <relationshipLabel>Live Asset Daily Summary Events</relationshipLabel>
    <relationshipName>LiveAssetDailySummaryEvents</relationshipName>
    <type>Lookup</type>
</CustomField>