force-app/main/default/objects/maps__LiveAssetDailySummaryEvent__c/fields/maps__OdometerMiles__c.field-meta.xml
<CustomField>
    <fullName>maps__OdometerMiles__c</fullName>
    <description>Odometer value (mi) captured at the time of event</description>
    <formula>ROUND(maps__OdometerKm__c * 0.62137, 2)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Odometer value (mi) captured at the time of event</inlineHelpText>
    <label>Odometer (mi)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>