force-app/main/default/objects/maps__LiveAssetDailySummaryEvent__c/fields/maps__Position__c.field-meta.xml
<CustomField>
    <fullName>maps__Position__c</fullName>
    <inlineHelpText>Asset location at start of event</inlineHelpText>
    <label>Position</label>
    <scale>7</scale>
    <type>Location</type>
</CustomField>