force-app/main/default/objects/maps__LiveAssetDailySummaryEvent__c/fields/maps__PostalCode__c.field-meta.xml
<CustomField>
    <fullName>maps__PostalCode__c</fullName>
    <description>Maps Live Postal Code address field</description>
    <inlineHelpText>Postal Code of event location (when available)</inlineHelpText>
    <label>Postal Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>