force-app/main/default/objects/maps__LiveAssetDailySummaryEvent__c/fields/maps__StartUnixTimeStamp__c.field-meta.xml
<CustomField>
    <fullName>maps__StartUnixTimeStamp__c</fullName>
    <label>Start Unix Time Stamp</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>