force-app/main/default/objects/maps__LiveAssetDailySummaryEvent__c/fields/maps__TotalEventTimeHours__c.field-meta.xml
<CustomField>
    <fullName>maps__TotalEventTimeHours__c</fullName>
    <inlineHelpText>Duration of a stop event in hours. (only available for Stop events)</inlineHelpText>
    <label>Event Duration (Hours)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>