force-app/main/default/objects/maps__LiveAssetDailySummaryEvent__c/fields/maps__TotalEventTimeMinutes__c.field-meta.xml
<CustomField>
    <fullName>maps__TotalEventTimeMinutes__c</fullName>
    <inlineHelpText>Duration of a stop event in minutes. (only available for Stop events)</inlineHelpText>
    <label>Event Duration (Minutes)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>